{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 85,
  "lineage": "9a6cc973-27c1-8fd9-b4c5-7a95cd0a7bde",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pmh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea4d4b8dc1e46212",
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:instance/i-092cf8bfb19d1219c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092cf8bfb19d1219c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chill-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0950b8181ffb7559f",
            "private_dns": "ip-10-0-0-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-13-124-3-105.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.3.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062f3f2b91fbda802",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be73292680c09b9b",
            "tags": {
              "Name": "chill-bastion"
            },
            "tags_all": {
              "Name": "chill-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f3b1ee79e055a42"
            ]
          },
          "dependencies": [
            "aws_eks_cluster.eks_clu",
            "aws_iam_role.eks_clurole",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "aws_security_group.eks_secu",
            "aws_subnet.eksnet_bastion",
            "aws_subnet.eksnet_ma",
            "aws_subnet.eksnet_work",
            "aws_vpc.eks_vpc",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:internet-gateway/igw-014c512b76fb98632",
            "id": "igw-014c512b76fb98632",
            "owner_id": "277707137172",
            "tags": {
              "Name": "chill-ig"
            },
            "tags_all": {
              "Name": "chill-ig"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chill_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:loadbalancer/app/cgv-alb/0965fe935d25e669",
            "arn_suffix": "app/cgv-alb/0965fe935d25e669",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cgv-alb-1077085650.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:loadbalancer/app/cgv-alb/0965fe935d25e669",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cgv-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03f3b1ee79e055a42"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aa29d1046421e048"
              },
              {
                "subnet_id": "subnet-0be73292680c09b9b"
              }
            ],
            "subnets": [
              "subnet-0aa29d1046421e048",
              "subnet-0be73292680c09b9b"
            ],
            "tags": {
              "Name": "cgv-alb"
            },
            "tags_all": {
              "Name": "cgv-alb"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.eks_secu",
            "aws_subnet.eksnet_bastion",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:loadbalancer/app/cgv-alb/0965fe935d25e669",
            "arn_suffix": "app/cgv-alb/0965fe935d25e669",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cgv-alb-1077085650.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:loadbalancer/app/cgv-alb/0965fe935d25e669",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cgv-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03f3b1ee79e055a42"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aa29d1046421e048"
              },
              {
                "subnet_id": "subnet-0be73292680c09b9b"
              }
            ],
            "subnets": [
              "subnet-0aa29d1046421e048",
              "subnet-0be73292680c09b9b"
            ],
            "tags": {
              "Name": "cgv-alb"
            },
            "tags_all": {
              "Name": "cgv-alb"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.eks_secu",
            "aws_subnet.eksnet_bastion",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chill_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:listener/app/cgv-alb/0965fe935d25e669/f499695e00e053a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:targetgroup/cgv-target-group-0/8a46741d021e56da",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:listener/app/cgv-alb/0965fe935d25e669/f499695e00e053a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:loadbalancer/app/cgv-alb/0965fe935d25e669",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.chill_alb",
            "aws_lb_target_group.chill_albtg",
            "aws_security_group.eks_secu",
            "aws_subnet.eksnet_bastion",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:listener/app/cgv-alb/0965fe935d25e669/1ccd517d0c431df2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:targetgroup/cgv-target-group-1/d6ed68c77734a40d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:listener/app/cgv-alb/0965fe935d25e669/1ccd517d0c431df2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:loadbalancer/app/cgv-alb/0965fe935d25e669",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.chill_alb",
            "aws_lb_target_group.chill_albtg",
            "aws_security_group.eks_secu",
            "aws_subnet.eksnet_bastion",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chill_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:targetgroup/cgv-target-group-0/8a46741d021e56da",
            "arn_suffix": "targetgroup/cgv-target-group-0/8a46741d021e56da",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:targetgroup/cgv-target-group-0/8a46741d021e56da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cgv-target-group-0",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cgv-target-group-0"
            },
            "tags_all": {
              "Name": "cgv-target-group-0"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:targetgroup/cgv-target-group-1/d6ed68c77734a40d",
            "arn_suffix": "targetgroup/cgv-target-group-1/d6ed68c77734a40d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:277707137172:targetgroup/cgv-target-group-1/d6ed68c77734a40d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cgv-target-group-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cgv-target-group-1"
            },
            "tags_all": {
              "Name": "cgv-target-group-1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_eksnet_bastion_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:route-table/rtb-07a57f245951afd7c",
            "id": "rtb-07a57f245951afd7c",
            "owner_id": "277707137172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014c512b76fb98632",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chill-bastion-rt"
            },
            "tags_all": {
              "Name": "chill-bastion-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_node_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:route-table/rtb-0407fa1674df3aafb",
            "id": "rtb-0407fa1674df3aafb",
            "owner_id": "277707137172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014c512b76fb98632",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chill-node-rt"
            },
            "tags_all": {
              "Name": "chill-node-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_bastion_rtass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046f005ce471e81ab",
            "route_table_id": "rtb-07a57f245951afd7c",
            "subnet_id": "subnet-0be73292680c09b9b"
          },
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_route_table.eks_eksnet_bastion_rt",
            "aws_subnet.eksnet_bastion",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcfa843a1e8c81af",
            "route_table_id": "rtb-07a57f245951afd7c",
            "subnet_id": "subnet-0aa29d1046421e048"
          },
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_route_table.eks_eksnet_bastion_rt",
            "aws_subnet.eksnet_bastion",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_man_rtaas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ede211d734e71f9e",
            "route_table_id": "rtb-0407fa1674df3aafb",
            "subnet_id": "subnet-03d666b16d093d775"
          },
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_route_table.eks_node_rt",
            "aws_subnet.eksnet_ma",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb62c7ab9a6ed01",
            "route_table_id": "rtb-0407fa1674df3aafb",
            "subnet_id": "subnet-0a055f9d697d109d9"
          },
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_route_table.eks_node_rt",
            "aws_subnet.eksnet_ma",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_work_rtaas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f23e363180e2f054",
            "route_table_id": "rtb-0407fa1674df3aafb",
            "subnet_id": "subnet-039b267915e7bbe51"
          },
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_route_table.eks_node_rt",
            "aws_subnet.eksnet_work",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc77d06f8f3aa302",
            "route_table_id": "rtb-0407fa1674df3aafb",
            "subnet_id": "subnet-0c8f0148be08aa3be"
          },
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_route_table.eks_node_rt",
            "aws_subnet.eksnet_work",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_secu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:security-group/sg-03f3b1ee79e055a42",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f3b1ee79e055a42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ftp-data",
                "from_port": 60000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 60100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "277707137172",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "pmh-sg"
            },
            "tags_all": {
              "name": "pmh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eksnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:subnet/subnet-0be73292680c09b9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be73292680c09b9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707137172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chill-pub-a"
            },
            "tags_all": {
              "Name": "chill-pub-a"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:subnet/subnet-0aa29d1046421e048",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa29d1046421e048",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707137172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chill-pub-c"
            },
            "tags_all": {
              "Name": "chill-pub-c"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eksnet_ma",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:subnet/subnet-03d666b16d093d775",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d666b16d093d775",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707137172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chill-ma-a"
            },
            "tags_all": {
              "Name": "chill-ma-a"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:subnet/subnet-0a055f9d697d109d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a055f9d697d109d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707137172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chill-ma-c"
            },
            "tags_all": {
              "Name": "chill-ma-c"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eksnet_work",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:subnet/subnet-039b267915e7bbe51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039b267915e7bbe51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707137172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chill-work-a"
            },
            "tags_all": {
              "Name": "chill-work-a"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:subnet/subnet-0c8f0148be08aa3be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8f0148be08aa3be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707137172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chill-work-c"
            },
            "tags_all": {
              "Name": "chill-work-c"
            },
            "vpc_id": "vpc-0997af3a28c7f78bd"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:277707137172:vpc/vpc-0997af3a28c7f78bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f9d340cd891beebf",
            "default_route_table_id": "rtb-090dbd88f8d5fa39a",
            "default_security_group_id": "sg-078887ea817d4d834",
            "dhcp_options_id": "dopt-004aeb64035f9c672",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0997af3a28c7f78bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090dbd88f8d5fa39a",
            "owner_id": "277707137172",
            "tags": {
              "Name": "chill-vpc"
            },
            "tags_all": {
              "Name": "chill-vpc"
            }
          }
        }
      ]
    }
  ]
}